Minor changes
-updating path getter in RefreshLogicGroupAndInterpretations
-eliminating some warnings in MANIFEST files